--- a/ejercicio6/ejercicio6.css
+++ b/ejercicio6/ejercicio6.css
@@ -1,6 +1,6 @@
 body{
-    background-image: url(redes.png), url(fondo.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+    background-image:url("social-media-icon-free-free-vector-removebg-preview.png"), url("5639077.jpg");
+    background-repeat:no-repeat;
+    background-size: 15%, cover;
+    margin-top: 10px;
 }
-  
