--- a/ejercicio4/ejercicio4.css
+++ b/ejercicio4/ejercicio4.css
@@ -1,6 +1,5 @@
 header{
     background: linear-gradient( to left, rgb(27, 240, 240), rgb(255, 0, 234));
-    color:hsl(120, 40%, 76%);
     border-radius: 20px;
     box-shadow: 10px;
     text-align: center;
@@ -11,15 +10,18 @@ header a{
     color: #74fce5;
 
 }
-section{
+.articulo1{
     background: radial-gradient(rgb(108, 230, 219),rgb(14, 96, 163), rgb(0, 0, 255) );
     color:rgb(174, 240, 157);
-    border-radius: 20px;
+    border-radius: 40px;
     text-align: center;
     font-size: 20px;
 
 }
-.articulo1{
-    background-color:hsla(0, 43%, 46%, 0.4);
-    color:hsl(120, 40%, 76%);
+.articulo2{
+    background-image: linear-gradient(to right, rgb(83, 156, 82) , rgb(219, 134, 234));
+    color:hsl(15, 85%, 41%);
+    border-radius: 40px;
+    text-align: center;
+
 }
