--- a/ejercicio5/ejercicios5.css
+++ b/ejercicio5/ejercicios5.css
@@ -12,18 +12,19 @@ header a{
     color: #74fce5;
 
 }
-section{
+.articulo1{
     background: radial-gradient(rgb(108, 230, 219),rgb(14, 96, 163), rgb(0, 0, 255) );
     color:rgb(174, 240, 157);
-    border-radius: 20px;
+    border-radius: 40px;
     text-align: center;
     font-size: 20px;
     font-family: "Sour Gummy", sans-serif;
 
 }
-.articulo1{
-    background-color:hsla(0, 43%, 46%, 0.4);
-    color:hsl(120, 40%, 76%);
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;    
-
+.articulo2{
+    background-image: linear-gradient(to top, rgb(156, 128, 82) , rgb(134, 226, 234));
+    color:hsl(0, 85%, 41%);
+    border-radius: 40px;
+    text-align: center;
+    font-family: Impact, 'Arial Narrow Bold', sans-serif;
 }
